@@ -10,6 +10,7 @@ Open Vehicle Monitor System v3 - Change log
                          - Network: New 'network status' command to show IP networking status
                          - Simcom: Check MUX status in NetWait state
                          - Simcom: Add a MuxStart sanity check timeout (120 seconds)
+                         - Simcom: Check MUX status in NetMode state
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
